GNOME Bugzilla – Bug 766459
ges: ges_asset_set_proxy documentation fix and add some g-i annotations
Last modified: 2016-06-07 16:32:09 UTC
The following two patches fixes a copy-paste error for documentation of ges_asset_set_proxy return value documentation and add some g-i annotations
Created attachment 327902 [details] [review] [1/2] asset: fix ges_asset_set_proxy() return value documentation
Created attachment 327903 [details] [review] [2/2] ges: add some g-i annotations according to documentation Annotation was mainly added according to documentation.