asset: fix ges_asset_set_proxy() return value documentation

https://bugzilla.gnome.org/show_bug.cgi?id=766459